[workspace]
members = [
    "canvas",
    "color",
    "content",
    "geometry",
    "export",
    "gpu",
    "export",
    "metal",
    "renderer",
    "resources",
    "simd",
    "text",
    "ui",
]

default-members = [
    "canvas",
    "content",
    "geometry",
    "gpu",
    "renderer",
    "simd",
    "text",
    "ui",
]

[patch.crates-io]
pathfinder_geometry = { path = "geometry" }
pathfinder_simd = { path = "simd" }

[patch."https://github.com/servo/pathfinder"]
pathfinder_content = { path = "content" }
pathfinder_color = { path = "color" }
pathfinder_geometry = { path = "geometry" }
pathfinder_renderer = { path = "renderer" }
pathfinder_simd = { path = "simd" }
